mega commit. recipe list has images and sortng. recipe editor exists but is not complete or functional